<resources>
    <string name="app_name">QLNT</string>
    <string name="action_settings">Settings</string>
    <string name="project_recorded">Project has been recorded</string>
    <string name="page1_title">Room</string>
    <string name="page2_title">Finance</string>
    <string name="page3_title">Report</string>
    <string name="page4_title">Setting</string>
    <string name="project_deleted_confirm">Project has been deleted</string>
    <string name="txtViewIncomeTitle">Income:</string>
    <string name="txtViewDeptTitle">Dept:</string>
    <string name="txtViewRevenueTitle">Revenue:</string>
    <string name="btEdit">Edit</string>
    <string name="btDelete">Delete</string>
    <string name="btCopy">Copy</string>
    <string name="txtViewProjectNameTitle">Name:</string>
    <string name="eTxtProjectNameHint">Input project name</string>
    <string name="etxtProjectNameHint">Input project name</string>
    <string name="inputProjectNameHint">Project name</string>
    <string name="inputProjectAddressHint">Address</string>
    <string name="inputProjectInvestmentHint">Investment amount (VND)</string>
    <string name="inputElectricUpriceHint">Electrical VND/kWh</string>
    <string name="inputWaterUpriceHint">Water VND/m3</string>
    <string name="inputTrashUprice">Trash collection VND/month</string>
    <string name="inputInternetUprice">Internet VND/month</string>
    <string name="inputTVUprice">TV cable VND/month</string>
    <string name="inputSecurityUprice">Security VND/month</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="next">Next</string>
    <string name="txtViewBaseTitile">Base Information</string>
    <string name="project_list">Projects</string>
    <string name="duration">Duration</string>
    <string name="to">to</string>
    <string name="duration_title">Duration:</string>
    <string name="duration_unit">year</string>
    <string name="cancel_button">Cancel</string>
    <string name="next_button">Next</string>
    <string name="durationInputError">1&#8211;100 only</string>
    <string name="yes">Yes</string>
    <string name="project_create_discard">Discard current project?</string>
    <string name="no">No</string>
    <string name="invalidName">invalid name</string>
    <string name="invalidAddress">invalid address</string>
    <string name="pickDay">pick a date</string>
    <string name="loanList">Loans:</string>
    <string name="interestRateUnit">%/year</string>
    <string name="currencyUnit">mil VND</string>
    <string name="financeConfigTitle">Finance Information</string>
    <string name="back_button">Back</string>
    <string name="invesment_amount_error">invalid amount</string>
    <string name="inputBankHint">Bank</string>
    <string name="inputLoanAmountHint">Loan amount (VND)</string>
    <string name="interestRateHint">Rate</string>
    <string name="LoanDate">Loan date</string>
    <string name="confirm_button">Confirm</string>
    <string name="loanDeclareTitle">Loan Declaration</string>
    <string name="invalidBankName">invalid bank name</string>
    <string name="rateInputError">0 to 50</string>
    <string name="loanDiscardConfirm">Discard this loan?</string>
    <string name="invalidLoanAmount">invalid loan amount</string>
    <string name="unitPrice">Unit Price</string>
    <string name="electricity_unitprice_error">invalid input</string>
    <string name="invalid_input_error">invalid input</string>
    <string name="currentPageDiscard">Discard content on current page?</string>
    <string name="add_loan_bt">ADD LOAN</string>
    <string name="project_create_confirm">Project Information</string>
    <string name="financeConfigFragmentTag">Finance Config Fragment Tag</string>
    <string name="millionShort">mil</string>
    <string name="projectCopyError">Error on copying project</string>
    <string name="delete_project_confirmation">Delete project?</string>
    <string name="annouce_project_saving">Saving project</string>
    <string name="txtViewProjectEditTitle">Project Information</string>
    <string name="announce_project_not_save">Discard saving project?</string>
    <string name="txtProjectName">Product Name</string>
    <string name="no_room_announcement">There is no room. Click add room button.</string>
    <string name="btBill">Bill</string>
    <string name="btCheckOut">Check Out</string>
    <string name="inputRoomNameHint">room name</string>
    <string name="inputRoomRentalPriceHint">monthly rental fee vnd/month</string>
    <string name="guestList">Guest</string>
    <string name="add_guest_bt">Add Guest</string>
    <string name="inputElectricInitIndexHint">Elec. initial index</string>
    <string name="inputWaterInitIndexHint">Water initial index</string>
    <string name="internet_label">internet</string>
    <string name="TV_label">TV cable</string>
    <string name="inputDepositHint">Deposit amount</string>
    <string name="billDate">Bill Date </string>
    <string name="inputGuestNameHint">name</string>
    <string name="inputGuestId">id or passport No.</string>
    <string name="interestGuestPhoneHint">phone number</string>
    <string name="roomChargeTitle">Room charge:</string>
    <string name="currencyBaseUnit">VND</string>
    <string name="electricityTitle">Electricity</string>
    <string name="indexTitle">Index</string>
    <string name="waterTitle">Water</string>
    <string name="newIndex">New</string>
    <string name="bullet">-</string>
    <string name="inputElectricalNewIndexHint">electrical index</string>
    <string name="inputWaterNewIndexHint">water index</string>
    <string name="OldIndex">Old</string>
    <string name="subTotal">Sub total</string>
    <string name="internetTittle">Internet</string>
    <string name="consumableTitle">Consumed</string>
    <string name="TVTittle">TV cable</string>
    <string name="TrashTittle">Trash</string>
    <string name="SecurityTittle">Security</string>
    <string name="getPaid_button">Get Paid</string>
    <string name="createBillGuide">Input new  electrical, water consumable index</string>
    <string name="otherTittle">Other</string>
    <string name="todo_checkIn">Please check in asap</string>
    <string name="checkOutDate">Check out date:</string>
    <string name="revenueTittle">Revenue</string>
    <string name="txtIncomeTittle">Income</string>
    <string name="txtDeptTittle">Dept</string>
    <string name="costTitle">Cost</string>
    <string name="recentActivity">Recent Activity</string>
    <string name="earn_description">Monthly payment</string>
    <string name="timeTitle">Time</string>
    <string name="allTittle">All</string>
    <string name="fromTitle">From</string>
    <string name="toTitle">to</string>
    <string name="roomName">Room name</string>
    <string name="typeTitle">Type</string>
    <string name="itemTitle">Item</string>
    <string name="expenseTitle">Expense</string>
    <string name="lastMonthTittle">Last month</string>
    <string name="btExtract">Extract</string>
    <string name="keyContact">key contact</string>
    <string name="todo_relax">Everything is fine. Just relax</string>
    <string name="todo_billing">Checking indexes and issuing bill</string>
    <string name="todo_get_payment">Plesae collect payment</string>
    <string name="btCheckIn">Check In</string>
    <string name="no_guest">No guest, room available</string>
    <string name="delete_room_confirmation">Delete room?</string>
    <string name="titleAddRoom">Add Room</string>
    <string name="roomChargeHint">Room charge</string>
    <string name="waterCostDesciption">Water fee</string>
    <string name="no_recent_item_announcement">no recent financial activity</string>
    <string name="totalCharge">Total</string>
    <string name="project_edit_title">Edit</string>
    <string name="checkIn_room_title">Check In</string>
    <string name="edit_room_title">Edit</string>
    <string name="announce_discard_checkIn">Discard check in process?</string>
    <string name="announce_discard_edit_room">Discard edit room?</string>
    <string name="option_menu_ok">Ok</string>
    <string name="option_menu_close">Close</string>
    <string name="guestDiscardConfirm">Discard saving guest?</string>
    <string name="addGuestTitle">Guest information</string>
    <string name="roomIdError">Room ID error</string>
    <string name="add_guest_title">Guest Information</string>
    <string name="delete_guest_confirmation">Delete guest?</string>
    <string name="sms_fail">Fail to send SMS</string>
    <string name="call_fail">No dial application</string>
    <string name="sms_tmp_appreciation">Thank you for using our service</string>
    <string name="guestCheckInCondition">No guest. Are you kidding me!?</string>
    <string name="messege_to_ask_for_indexes">Please help check water and electrical indexes. Thank you!</string>
    <string name="messege_ask_for_payment">Please process payment for room rental. Please ignore if you already paid.</string>
    <string name="chargeTitle">Charge:</string>
    <string name="depositTitle">Deposit:</string>
    <string name="startDateTitle">From:</string>
    <string name="no_guest_announcement">There is no guest. Add guest for checking in</string>
    <string name="not_yet_checkin_announcement">Room has not been checked in. Please check in asap.</string>
    <string name="should_not_delete_guest">At least one guest is neccessary. You might check out instead.</string>
    <string name="bill_reminder">It is time for bill. Room:</string>
    <string name="navigation_drawer_header_content_description">Navigation logo header logo</string>
    <string name="navigation_drawer_header_title">QLNT</string>
    <string name="current_project_title">Current Project</string>
    <string name="project_list_title">Project List</string>
</resources>
