<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:gravity="center_vertical">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayoutBank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtInputLoanBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputBankHint"
                android:inputType="textCapSentences"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayoutLoanAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtLoanAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputLoanAmountHint"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayoutRate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_weight="20">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:hint="@string/interestRateHint"
                    android:inputType="numberDecimal"
                    android:maxLength="4"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="30"
                android:paddingBottom="12dp"
                android:text="@string/interestRateUnit"
                android:textSize="20sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayoutLoanDate"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_weight="50">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtLoanDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusableInTouchMode="false"
                    android:hint="@string/LoanDate"
                    android:inputType="date"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal|bottom">

            <Button
                android:id="@+id/btCancel"
                style="?android:borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:text="@string/cancel_button"
                android:textColor="@color/colorAccent"/>

            <Button
                android:id="@+id/btConfirm"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:text="@string/confirm_button"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
