<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/project_base"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_marginTop="@dimen/layout_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputProjectNameHint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        android:layout_marginStart="@dimen/layout_marginStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLayoutName">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputProjectAddressHint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutDuration"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_marginTop="@dimen/layout_marginTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLayoutAddress">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:ems="10"
            android:hint="@string/duration"
            android:inputType="number"
            android:maxLength="8" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:text="@string/duration_unit"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/txtLayoutDuration"
        app:layout_constraintTop_toTopOf="@id/txtLayoutDuration"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        android:layout_marginTop="@dimen/layout_marginTop"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@id/txtLayoutDuration"
        app:layout_constraintTop_toBottomOf="@id/txtLayoutDuration">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/startDate"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingBottom="0dp"
        android:paddingEnd="@dimen/paddingEnd"
        android:paddingStart="@dimen/paddingStart"
        android:text="@string/to"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        android:layout_marginTop="@dimen/layout_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/txtLayoutDuration">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/endDate"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
