<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtLayoutInvestment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackgroundColor"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/paddingBottom"
        android:paddingEnd="@dimen/paddingEnd"
        android:paddingStart="@dimen/paddingStart"
        android:paddingTop="@dimen/paddingTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/investmentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:hint="@string/inputProjectInvestmentHint"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/layoutAddloan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtLayoutInvestment">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/layout_marginStart"
                android:layout_weight="2"
                android:text="@string/loanList"
                android:textSize="20sp"/>

        <TextView
            android:id="@+id/totalLoan"
            android:layout_width="wrap_content"
            android:maxWidth="100dp"
            android:maxLength="8"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:text="--"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/layout_marginStart"
            android:text="@string/currencyUnit"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btAddLoan"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="@dimen/layout_marginEnd"
            android:layout_weight="3"
            android:text="@string/add_loan_bt"
            android:textColor="@color/secondaryColor"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/loanList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_marginTop="@dimen/layout_marginTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutAddloan"/>
</android.support.constraint.ConstraintLayout>
